kal003a: update UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
@@ -34,7 +34,7 @@
 			    </colgroup>
 			    <thead>
 			        <tr>
-			            <th class="ui-widget-header" style ="text-align: center;"><div data-bind="ntsCheckBox: {checked: isAllCheckCondistion}"></div></th>
+			            <th class="ui-widget-header" style ="text-align: center;"><div data-bind="ntsCheckBox: {checked: isAllCheckCondition}"></div></th>
 			            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_24')}</th>
 			            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_12')}</th>
 			            <th class="ui-widget-header" style ="text-align: center;">#{i18n.getText('KAL003_23')}</th>
