--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/fixedcheck.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/fixedcheck.xhtml
@@ -14,9 +14,9 @@
 			<tr class="bg-green">
 				<!-- I2_2 3 4 5 6 7 8 9 -->
 				<th style="width: 55px;text-align: center;"><div data-bind="ntsCheckBox: { checked: isAllfixedCheck  }"></div></th>
-				<th style="width: 100px;">#{i18n.getText('KDW001_25')}</th>
-				<th style="width: 155px; text-align: center;">#{i18n.getText('KDW001_26')}</th>
-				<th style="width: 200px;">#{i18n.getText('KDW001_80')}</th>
+				<th style="width: 100px;">#{i18n.getText('KAL003_24')}</th>
+				<th style="width: 155px; text-align: center;">#{i18n.getText('KAL003_54')}</th>
+				<th style="width: 200px;">#{i18n.getText('KAL003_55')}</th>
 				
 			</tr>
 		</thead>
@@ -24,11 +24,11 @@
 			<com:ko-foreach bind="listFixedConditionWorkRecord">
 				<tr>
 					<td style="text-align: center;">
-						<div data-bind="ntsCheckBox: { checked: $data.useAtr }"></div>
+						<div data-bind="ntsCheckBox: { checked: useAtr }"></div>
 					</td>
-					<td><span data-bind="text: $data.no"></span> </td>
-					<td> <span data-bind="text: $data.name"></span></td>
-					<td> <input data-bind="ntsTextEditor: {value: $data.name}" /></td>
+					<td><span data-bind="text: fixConWorkRecordNo"></span> </td>
+					<td> <span data-bind="text: checkName"></span></td>
+					<td> <input data-bind="ntsTextEditor: {value: message}" /></td>
 				</tr>
 			</com:ko-foreach>
 		</tbody>
