--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/demo/index.xhtml
@@ -16,7 +16,7 @@
 			<com:scriptfile path="kdl003.parent.vm.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div id="functions-area">
+			<div id="functions-area" style="padding-top: 30px !important;">
 				<button class="large" data-bind="click: OpenDialog003" >KDL003</button>
 			</div>
 			<div id="contents-area">
