--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
@@ -5,6 +5,7 @@
 			data-bind="ntsComboBox: {
 								options: listWorkType,
 								optionsValue: 'workTypeCode',
+								visibleItemsCount: 20,
 								value: selectedWorkTypeCode,
 								optionsText: 'labelDisplay',
 								editable:  false,
@@ -33,6 +34,7 @@
 			data-bind="ntsComboBox: {
 										options: listWorkTimeComboBox,
 										optionsValue: 'codeName',
+										visibleItemsCount: 20,
 										value: selectedWorkTimeCode,
 										optionsText: 'labelDisplay', 
 										editable:  false,
