--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
@@ -13,7 +13,7 @@
 			<tr>
 				<td class="padding-checkbox">
 					<!-- B1_1 -->
-					<div data-bind="ntsCheckBox: { checked: enable_WinAcc1 }">#{i18n.getText('CMM021_20')}</div>					
+					<div tabindex="-1" data-bind="ntsCheckBox: { checked: enable_WinAcc1 }">#{i18n.getText('CMM021_20')}</div>					
 				</td>
 			</tr>
 			<!-- B1_2 -->
@@ -25,7 +25,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B1_4 -->
-				<td class="padding-scr-b"><input id="focus-hostName1" tabindex="1"
+				<td class="padding-scr-b"><input id="focus-hostName1" tabindex="8"
 					data-bind="ntsTextEditor: {
 									value: hostName1,
 									name: '#[CMM021_21]',
@@ -44,7 +44,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B1_6 -->
-				<td class="padding-scr-b padding-botom-scr-b" ><input id="" tabindex="2"
+				<td class="padding-scr-b padding-botom-scr-b" ><input id="" tabindex="9"
 					data-bind="ntsTextEditor: {
 									value: userName1,
 									name: '#[CMM021_22]',
@@ -64,7 +64,7 @@
 			<tr>
 				<!-- B2_1 -->
 				<td class="padding-checkbox">
-					<div data-bind="ntsCheckBox: { checked: enable_WinAcc2 }">#{i18n.getText('CMM021_23')}</div>
+					<div tabindex="-1" data-bind="ntsCheckBox: { checked: enable_WinAcc2 }">#{i18n.getText('CMM021_23')}</div>
 				</td>
 			</tr>
 			<!-- B2_2 -->
@@ -76,7 +76,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B2_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="3"
+				<td class="padding-scr-b"><input id="" tabindex="10"
 					data-bind="ntsTextEditor: {
 									value: hostName2,
 									name: '#[CMM021_24]',
@@ -95,7 +95,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B2_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="4"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="11"
 					data-bind="ntsTextEditor: {
 									value: userName2,
 									name: '#[CMM021_25]',
@@ -115,7 +115,7 @@
 			<tr>
 				<!-- B3_1 -->
 				<td class="padding-checkbox">
-					<div data-bind="ntsCheckBox: { checked: enable_WinAcc3 }">#{i18n.getText('CMM021_26')}</div>
+					<div tabindex="-1" data-bind="ntsCheckBox: { checked: enable_WinAcc3 }">#{i18n.getText('CMM021_26')}</div>
 				</td>
 			</tr>
 			<!-- B3_2 -->
@@ -126,7 +126,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B3_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="5"
+				<td class="padding-scr-b"><input id="" tabindex="12"
 					data-bind="ntsTextEditor: {
 									value: hostName3,
 									name: '#[CMM021_27]',
@@ -145,7 +145,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B3_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="6"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="13"
 					data-bind="ntsTextEditor: {
 									value: userName3,
 									name: '#[CMM021_28]',
@@ -165,7 +165,7 @@
 			<tr>
 				<!-- B4_1 -->
 				<td class="padding-checkbox">
-					<div data-bind="ntsCheckBox: { checked: enable_WinAcc4 }">#{i18n.getText('CMM021_29')}</div>
+					<div tabindex="-1" data-bind="ntsCheckBox: { checked: enable_WinAcc4 }">#{i18n.getText('CMM021_29')}</div>
 				</td>
 			</tr>
 			<!-- B4_2 -->
@@ -176,7 +176,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B4_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="7"
+				<td class="padding-scr-b"><input id="" tabindex="14"
 					data-bind="ntsTextEditor: {
 									value: hostName4,
 									name: '#[CMM021_30]',
@@ -195,7 +195,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B4_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="8"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="15"
 					data-bind="ntsTextEditor: {
 									value: userName4,
 									name: '#[CMM021_31]',
@@ -215,7 +215,7 @@
 			<tr>
 				<!-- B5_1 -->
 				<td class="padding-checkbox">
-					<div data-bind="ntsCheckBox: { checked: enable_WinAcc5 }">#{i18n.getText('CMM021_32')}</div>
+					<div tabindex="-1" data-bind="ntsCheckBox: { checked: enable_WinAcc5 }">#{i18n.getText('CMM021_32')}</div>
 				</td>
 			</tr>
 			<!-- B5_2 -->
@@ -226,7 +226,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B5_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="9"
+				<td class="padding-scr-b"><input id="" tabindex="16"
 					data-bind="ntsTextEditor: {
 									value: hostName5,
 									name: '#[CMM021_33]',
@@ -245,7 +245,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B5_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="10"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="17"
 					data-bind="ntsTextEditor: {
 									value: userName5,
 									name: '#[CMM021_34]',
