--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/a/index.xhtml
@@ -44,7 +44,7 @@
 						<ui:include src="../share/index.xhtml"></ui:include>
 					</div><br/>
 					<!-- Footer -->
-					<div class="lstApprover" data-bind="with: kaf000_a">
+					<div class="lstApprover" data-bind="with: kaf000_a" style="margin-top: -30px;">
 						<ui:include src="../../000/a/index2_new.xhtml" />
 					</div>
 			</div>
