--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -52,6 +52,7 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
+				<div style="min-width: 1290px">
 					<!-- B1_1 -->
 					<a class="goback" data-bind="ntsLinkButton: { jump: '../test/index.xhtml' }">#{i18n.getText('KAF000_14')}</a>
 					<!-- B1_2 -->
@@ -105,7 +106,7 @@
 													visible: !displayButtonControl().displayCancel()">#{i18n.getText('KAF000_24')}</button>
 					<br></br>
 				</div>
-			
+			</div>
 			<div id="contents-area">
 				<!-- row1 -->
 				<div id="message-area" data-bind =  "visible: !displayButtonControl().displayMessageArea()"> 
