--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_color.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_color.scss
@@ -12,7 +12,7 @@
 .color-daily-extra-holiday {color: #0086EA !important;}
 .bg-daily-alter-self {background-color:#94B7FE !important;}
 .bg-daily-alter-other {background-color:#CEE6FF !important;}
-.bg-daily-reflect-application {background-color:#92F29B !important;}
+.bg-daily-reflect-application {background-color:#BFEA60 !important;}
 .bg-daily-error {background-color:#FEC6C6 !important;}
 .bg-daily-alarm {background-color:#E3F385 !important;}
 .bg-daily-calculated {background-color:#E4C9FF !important;}
