show details of system error

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/system/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/system/index.xhtml
@@ -25,6 +25,8 @@
 					管理者へご連絡ください。
 				</div>
 				<button class="large" data-bind="click: gotoLogin">ログイン画面へ</button>
+				
+				<pre data-bind="text:details" style="text-align: left"></pre>
 			</div>
 		</ui:define>
 	</ui:composition>
