--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
@@ -28,7 +28,8 @@
 		<ui:define name="content">
 			<div id="">
 					<div style="margin-bottom: 10px; margin-left: 10px;">#{i18n.getText('KDL003_2')}</div>
-					<div style="border: 0.5px solid; border-radius: 12px; padding-top: 15px" class="caret-bottom kdl003-border">
+					<div style="border: 0.5px solid; border-radius: 12px; padding-top: 15px; 
+						margin-left: 10px; margin-right: 10px;" class="caret-bottom kdl003-border">
 					<div style="margin-left: 10px;">
 						<table style="margin-bottom: 10px;">
 							<tr>
