fixbug save, validate constraint, list userDto bằng null, tabindex, update winacc CMM021

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
@@ -5,6 +5,10 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
+	<com:ValidatorScript>
+				nts.uk.ctx.sys.gateway.dom.singlesignon.HostName				
+				nts.uk.ctx.sys.gateway.dom.singlesignon.UserName				
+	</com:ValidatorScript>
 	<div class="screen-b-mode">
 
 		<table>
@@ -32,6 +36,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'HostName',
 									enable: enable_WinAcc1,
 									required: true
 								}" />
@@ -51,6 +56,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'UserName',
 									enable: enable_WinAcc1,
 									required: true
 								}" />
@@ -83,6 +89,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'HostName',
 									enable: enable_WinAcc2,
 									required: true
 								}" />
@@ -102,6 +109,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'UserName',
 									enable: enable_WinAcc2,
 									required: true
 								}" />
@@ -133,6 +141,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'HostName',
 									enable: enable_WinAcc3,
 									required: true
 								}" />
@@ -152,6 +161,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'UserName',
 									enable: enable_WinAcc3,
 									required: true
 								}" />
@@ -183,6 +193,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'HostName',
 									enable: enable_WinAcc4,
 									required: true
 								}" />
@@ -202,6 +213,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'UserName',
 									enable: enable_WinAcc4,
 									required: true
 								}" />
@@ -233,6 +245,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'HostName',
 									enable: enable_WinAcc5,
 									required: true
 								}" />
@@ -252,6 +265,7 @@
 									option: {
 										width: '200px',
 									},
+									constraint: 'UserName',
 									enable: enable_WinAcc5,
 									required: true
 								}" />
