--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/c.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/c.xhtml
@@ -5,8 +5,11 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-	<div class="screen-c-mode">
-		
+	<com:ValidatorScript>
+				nts.uk.ctx.sys.gateway.dom.singlesignon.UserName				
+				nts.uk.ctx.sys.gateway.dom.singlesignon.CompanyCode
+	</com:ValidatorScript>
+	<div class="screen-c-mode">		
 		<table>	
 			<tr>
 				<!-- C1_1 -->
@@ -30,6 +33,7 @@
 										width: '250px',
 									},
 									enable: enable_otherAcc,
+									constraint: 'CompanyCode',
 									required: true
 								}" />
 				</td>
@@ -48,6 +52,7 @@
 										width: '250px',
 									},
 									enable: enable_otherAcc,
+									constraint: 'UserName',									
 									required: true
 								}" />
 				</td>
